syntax="proto3";

package user_auth;

option java_multiple_files = true;
option java_package = "userauth";
option java_outer_classname = "UserAuthentication";
option objc_class_prefix = "UA";


service Authorization{
  rpc LogIn(LoginRequest) returns(Response);
  rpc LogOut(LogoutRequest) returns(Response);
}

message LoginRequest{
  string userName=1;
  string password=2;
}

message Response{
  string message=1;
  int32 code1=2;
  User user=3;
}

message LogoutRequest{
  int32 userId=1;
}
message User{
  int32 userId=1;
  string email=2;
  string phoneNumber=3;
  string firstName=4;
  string lastName=5;
}